// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Checkbox ui default 1`] = `
<div>
  <div
    class="form-check"
  >
    <label
      class="form-check-label"
      for="agree"
    >
      <input
        aria-invalid="true"
        class="is-invalid form-check-input"
        id="agree"
        type="checkbox"
      />
       
      Agree
    </label>
    Some error
  </div>
</div>
`;

exports[`Component: Checkbox ui with placeholder 1`] = `
<div>
  <div
    class="form-check"
  >
    <label
      class="form-check-label"
      for="agree"
    >
      <input
        checked=""
        class="is-valid form-check-input"
        id="agree"
        type="checkbox"
      />
       
      Agree
    </label>
    <p
      class="text-muted mb-0"
    >
      <em>
        Do you agree
      </em>
    </p>
    Some error
  </div>
</div>
`;
